--- a/flex_test.html
+++ b/flex_test.html
@@ -1,16 +1,64 @@
-<script src="test.js"></script>
-
+<html lang="en" class="no-js">
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="test.js"></script>
+		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+	</head>
+<div class="flex-container">
+<div class="flex-item" id="1"></div>
 <div class="flex-item"></div>
 <div class="flex-item"></div>
 <div class="flex-item"></div>
 <div class="flex-item"></div>
+<div class="flex-large"></div>
+<div class="flex-item" id="6"></div>
+<div class="flex-item" id="7"></div>
 <div class="flex-item"></div>
-
+<div class="flex-item"></div>
+<div class="flex-item"></div>
+</div>
 
 <style>
+  .flex-container {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  postiion: relative;
+  }
   .flex-item {
-    display: flex;
-    flex-wrap: wrap;
+    flex-grow: 1;
+    background: burlywood;
+    padding: 2.5px;
+    margin: 5px;
+    margin-top: 5px;
+    line-height: 150px;
+    color: black;
+    font-weight: bold;
+    font-size: 3em;
+    text-align: center;
+    transition: transform 0.5s ease, opacity 0.5s ease;
+    flex: 200px;
+    height: 200px;
+  }
+  .flex-large {
+    display: block;
+    width: 100%;
+    background: burlywood;
+    padding: 2.5px;
+    margin: 5px;
+    margin-top: 5px;
+    color: black;
+    font-weight: bold;
+    font-size: 3em;
+    text-align: center;
+    height: 400px;
   }
 
 </style>
