fix anchor problem

--- a/TED_autumn.html
+++ b/TED_autumn.html
@@ -2,22 +2,27 @@
 
   <html lang="en" class="no-js">
 	  <head>
-		  <title>TEDXTainan Autumn</title>
+		  <title>TEDXTainan 秋季招募</title>
 		  <meta charset="UTF-8" />
 		  <meta name="viewport" content="width=device-width, initial-scale=1" />
 		  <link rel="stylesheet" href="assets/css/style.css" />
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-      <script src="assets/js/main.js"></script>
+      <script src="assets/js/block.js"></script>
 	  </head>
 
   <body>
   <ul class="flex-container" id="title-bar">
     <li class="flex-item" style="font-family: Arial">
-      <span class="image">
+      <span class="image move">
         <img id="nav-bar" src="img/navbar_b.png" alt="">
       </span>
-      <span class="image">
-        <img id="nav-detail" src="img/navbar_detail.png" alt="">
+      <span class="image detail">
+        <img id="nav-detail" src="img/detail/navbar_button.png" alt="">
+        <div class="three-buttons">
+          <img src="img/buttons/h_r.png" alt="">
+          <img src="img/buttons/fb_r.png" alt="">
+        </div>
+
       </span>
       <a href="#">
         <div class="content">
@@ -26,125 +31,151 @@
     </li>
   </ul>
 
-  <ul class="flex-container">
+  <ul class="flex-container" id="content-bar">
     <li class="flex-item" id="1" style="">
-      <span class="image">
-        <img id="hr" src="img/hr_b.png" alt="">
+      <span class="image move">
+        <a href="#content-bar">
+          <img id="hr" src="img/hr_b.png" alt="">
+        </a>
       </span>
-      <a href="#">
-        <div class="content">
-        </div>
-      </a>
     </li>
     <li class="flex-item" id="2" style="">
-      <span class="image">
-        <img id="pr" src="img/pr_b.png" alt="">
+      <span class="image move">
+        <a href="#content-bar">
+          <img id="pr" src="img/pr_b.png" alt="">
+        </a>
       </span>
-      <a href="#">
-        <div class="content"></div>
-      </a>
     </li>
     <li class="flex-item" id="3" style="">
-      <span class="image">
-        <img id="curating" src="img/curating_b.png" alt="">
+      <span class="image move">
+        <a href="#content-bar">
+          <img id="curating" src="img/curating_b.png" alt="">
+        </a>
       </span>
-      <a href="#">
-        <div class="content"></div>
-      </a>
     </li>
     <li class="flex-item" id="4" style="">
-      <span class="image">
-        <img id="design" src="img/design_b.png" alt="">
+      <span class="image move">
+        <a href="#content-bar">
+          <img id="design" src="img/design_b.png" alt="">
+        </a>
       </span>
-      <a href="#">
-        <div class="content"></div>
-      </a>
     </li>
     <li class="flex-item" id="5" style="">
-      <span class="image">
-        <img id="finance" src="img/finance_b.png" alt="">
+      <span class="image move">
+        <a href="#content-bar">
+          <img id="finance" src="img/finance_b.png" alt="">
+        </a>
       </span>
-      <a href="#">
-        <div class="content"></div>
-      </a>
     </li>
+
+    <!-- detail part1 -->
 
     <div id="_0"></div>
+
     <li class="flex-nav" id="_1">
       <span class="image">
-        <img id="curatingd" src="img/curating_detail.png" alt="">
+        <img src="img/detail/hr_detail.png" alt="">
       </span>
     </li>
-    <li class="flex-nav" id="_2"></li>
-    <li class="flex-nav" id="_3"></li>
-    <li class="flex-nav" id="_4"></li>
-    <li class="flex-nav" id="_5"></li>
+    <li class="flex-nav" id="_2">
+      <span class="image">
+        <img src="img/detail/pr_detail.png" alt="">
+      </span>
+    </li>
+    <li class="flex-nav" id="_3">
+      <span class="image">
+        <img src="img/detail/curating_detail.png" alt="">
+      </span>
+    </li>
+    <li class="flex-nav" id="_4">
+      <span class="image">
+        <img src="img/detail/design_detail.png" alt="">
+      </span>
+    </li>
+    <li class="flex-nav" id="_5">
+      <span class="image">
+        <img src="img/detail/finance_detail.png" alt="">
+      </span>
+    </li>
+
+    <!-- part1 end -->
 
     <li class="flex-item" id="6" style="">
-      <span class="image">
+      <span class="image move">
         <img id="it" src="img/it_b.png" alt="">
       </span>
-      <a href="#">
+      <a href="#6">
         <div class="content"></div>
       </a>
     </li>
     <li class="flex-item" id="7" style="">
-      <span class="image">
+      <span class="image move">
         <img id="market" src="img/market_b.png" alt="">
       </span>
-      <a href="#">
+      <a href="#7">
         <div class="content"></div>
       </a>
     </li>
     <li class="flex-item" id="8" style="">
-      <span class="image">
+      <span class="image move">
         <img id="photo" src="img/photo_b.png" alt="">
       </span>
-      <a href="#_8">
+      <a href="#8">
         <div class="content"></div>
       </a>
     </li>
     <li class="flex-item" id="9" style="">
-      <span class="image">
+      <span class="image move">
         <img id="sd" src="img/sd_b.png" alt="">
       </span>
-      <a href="#_9">
+      <a href="#9">
         <div class="content"></div>
       </a>
     </li>
     <li class="flex-item" id="10" style="">
-      <span class="image">
+      <span class="image move">
         <img id="join" src="img/join_b.png" alt="">
       </span>
-      <a href="#_10">
+      <a href="http://drive.google.com/uc?export=download&id=0B3X_LcqIRrpeMGJNOU5LME1BZnc">
         <div class="content"></div>
       </a>
     </li>
 
-    <li class="flex-nav" id="_6"></li>
-    <li class="flex-nav" id="_7"></li>
-    <li class="flex-nav" id="_8"></li>
-    <li class="flex-nav" id="_9"></li>
+    <!-- detail part2 -->
+
+    <li class="flex-nav" id="_6">
+      <span class="image">
+        <img src="img/detail/it_detail.png" alt="">
+      </span>
+    </li>
+    <li class="flex-nav" id="_7">
+      <span class="image">
+        <img src="img/detail/market_detail.png" alt="">
+      </span>
+    </li>
+    <li class="flex-nav" id="_8">
+      <span class="image">
+        <img src="img/detail/photo_detail.png" alt="">
+      </span>
+    </li>
+    <li class="flex-nav" id="_9">
+      <span class="image">
+        <img src="img/detail/sd_detail.png" alt="">
+      </span>
+    </li>
     <li class="flex-nav" id="_10"></li>
   </ul>
 
-  <!--
-  <ul class="flex-container">
-    <li class="flex-item">1</li>
-    <li class="flex-item">2</li>
-    <li class="flex-item">3</li>
-    <li class="flex-item">4</li>
-    <li class="flex-item">4</li>
-  </ul>
--->
+
+  <!-- part2 end -->
 
   <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/skel.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-    <script src="assets/js/main.js"></script>
-    <script src="assets/js/block.js"></script>
+
+
+
+
+
+
 
   </body>
 
