--- a/2016autumn.html
+++ b/2016autumn.html
@@ -5,18 +5,28 @@
 		  <title>TEDXTainan 秋季招募</title>
 		  <meta charset="UTF-8" />
 		  <meta name="viewport" content="width=device-width, initial-scale=1" />
-		  <link rel="stylesheet" href="assets/css/style.css" />
+		  <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+      <!--<link id="size-stylesheet" rel="stylesheet" type="text/css" href="assets/css/phone.css" />-->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
       <script src="assets/js/main.js"></script>
 	  </head>
 <!--
-______
-|   _  \
-|  |_| /
-|  ___/
-| |
-|_|
 
+   ______   ______     _____     __  __     ______   ______     __     __   __     ______     __   __
+/\__  _\ /\  ___\   /\  __-.  /\_\_\_\   /\__  _\ /\  __ \   /\ \   /\ "-.\ \   /\  __ \   /\ "-.\ \
+\/_/\ \/ \ \  __\   \ \ \/\ \ \/_/\_\/_  \/_/\ \/ \ \  __ \  \ \ \  \ \ \-.  \  \ \  __ \  \ \ \-.  \
+  \ \_\  \ \_____\  \ \____-   /\_\/\_\    \ \_\  \ \_\ \_\  \ \_\  \ \_\\"\_\  \ \_\ \_\  \ \_\\"\_\
+   \/_/   \/_____/   \/____/   \/_/\/_/     \/_/   \/_/\/_/   \/_/   \/_/ \/_/   \/_/\/_/   \/_/ \/_/
+
+        _____________________            __________
+       ╱                      ╲         //   /    \ ╲
+      | 終於可以繼續當寶可夢大師惹 |       | |  /__   |  |
+       ╲______________________╱       /\¯¯¯¯¯¯¯¯¯¯/¯¯/ ╲
+                 ╲                   /_|¯¯¯7__¯¯/¯¯¯ | ╲¯
+                   ╲              ︵   |  ◎   |/ ◎   | _/
+                                ⎛   ⎞  | ~   皿  ~   ╱_/
+                                ⎝¯◎¯⎠___╲ __________/
+                                 ︶   ╲  |  \_ _/   |╲
 -->
   <body>
   <ul class="flex-container" id="title-bar">
@@ -27,35 +37,35 @@ ______
       <span class="image detail">
         <img id="nav-detail" src="img/detail/navbar_nobut.png" alt="">
         <div class="three-buttons">
-          <a href="http://blog.tedxtainan.org/">
+          <a href="http://blog.tedxtainan.org/" target="_blank">
             <img id="h" src="img/buttons/h_b.png" alt="">
           </a>
-          <a href="#">
+          <a href="https://www.facebook.com/TEDxTainan/" target="_blank">
             <img id="fb" src="img/buttons/fb_b.png" alt="">
           </a>
-          <a href="#">
+          <a href="https://www.instagram.com/tedxtainan/" target="_blank">
             <img id="ig" src="img/buttons/ig_b.png" alt="">
           </a>
         </div>
         <div class="side-buttons">
-          <a href="#">
+          <a href="http://blog.tedxtainan.org/events/pastevent/" target="_blank">
             <img id="2011" src="img/buttons/2011_b.png" alt="">
           </a>
-          <a href="#">
+          <a href="http://blog.tedxtainan.org/events/pastevent/" target="_blank">
             <img id="2012" src="img/buttons/2012_b.png" alt="">
           </a>
-          <a href="#">
+          <a href="http://blog.tedxtainan.org/events/events2013/" target="_blank">
             <img id="2013" src="img/buttons/2013_b.png" alt="">
           </a>
-          <a href="#">
+          <a href="http://blog.tedxtainan.org/events/" target="_blank">
             <img id="2014" src="img/buttons/2014_b.png" alt="">
           </a>
-          <a href="#">
+          <a href="http://blog.tedxtainan.org/2015-負成長時代/" target="_blank">
             <img id="2015" src="img/buttons/2015_b.png" alt="">
           </a>
         </div>
         <div class="joinus">
-          <a href="#">
+          <a href="http://drive.google.com/uc?export=download&id=0B5_zXPDEfg8XYXE5aTd6aTRMUVk">
             <img id="joinbut" src="img/buttons/join_b.png" alt="">
           </a>
         </div>
@@ -66,14 +76,14 @@ ______
   <ul class="flex-container" id="content-bar">
     <li class="flex-item" id="1" style="">
       <span class="image move">
-        <a href="#hr">
+        <a href="#">
           <img id="hr" src="img/hr_b.png" alt="">
         </a>
       </span>
     </li>
     <li class="flex-item" id="2" style="">
       <span class="image move">
-        <a href="#content-bar">
+        <a href="#">
           <img id="pr" src="img/pr_b.png" alt="">
         </a>
       </span>
@@ -83,6 +93,9 @@ ______
       <span class="image phone">
         <img src="img/phone/hr_detailphone.png" alt="">
         <div class="phonebut">
+          <a href="http://drive.google.com/uc?export=download&id=0B5_zXPDEfg8XYXE5aTd6aTRMUVk">
+            <img src="img/buttons/join_b.png" alt="">
+          </a>
         </div>
       </span>
     </li>
@@ -90,6 +103,9 @@ ______
       <span class="image phone">
         <img src="img/phone/pr_detailphone.png" alt="">
         <div class="phonebut">
+          <a href="http://drive.google.com/uc?export=download&id=0B5_zXPDEfg8XYXE5aTd6aTRMUVk">
+            <img src="img/buttons/join_b.png" alt="">
+          </a>
         </div>
       </span>
     </li>
@@ -97,14 +113,14 @@ ______
 
     <li class="flex-item" id="3" style="">
       <span class="image move">
-        <a href="#content-bar">
+        <a href="#">
           <img id="curating" src="img/curating_b.png" alt="">
         </a>
       </span>
     </li>
     <li class="flex-item" id="4" style="">
       <span class="image move">
-        <a href="#content-bar">
+        <a href="#">
           <img id="design" src="img/design_b.png" alt="">
         </a>
       </span>
@@ -115,6 +131,9 @@ ______
       <span class="image phone">
         <img src="img/phone/curating_detailphone.png" alt="">
         <div class="phonebut">
+          <a href="http://drive.google.com/uc?export=download&id=0B5_zXPDEfg8XYXE5aTd6aTRMUVk">
+            <img src="img/buttons/join_b.png" alt="">
+          </a>
         </div>
       </span>
     </li>
@@ -122,13 +141,16 @@ ______
       <span class="image phone">
         <img src="img/phone/design_detailphone.png" alt="">
         <div class="phonebut">
+          <a href="http://drive.google.com/uc?export=download&id=0B5_zXPDEfg8XYXE5aTd6aTRMUVk">
+            <img src="img/buttons/join_b.png" alt="">
+          </a>
         </div>
       </span>
     </li>
     <!-- end -->
     <li class="flex-item" id="5" style="">
       <span class="image move">
-        <a href="#content-bar">
+        <a href="#">
           <img id="finance" src="img/finance_b.png" alt="">
         </a>
       </span>
@@ -138,7 +160,7 @@ ______
       <span class="image full">
         <img src="img/detail/hr_detailnobut.png" alt="">
         <div class="but">
-          <a href="#">
+          <a href="http://drive.google.com/uc?export=download&id=0B5_zXPDEfg8XYXE5aTd6aTRMUVk">
             <img id="jbut" src="img/buttons/join_b.png" alt="">
           </a>
         </div>
@@ -148,7 +170,7 @@ ______
       <span class="image full">
         <img src="img/detail/pr_detailnobut.png" alt="">
         <div class="but">
-          <a href="#">
+          <a href="http://drive.google.com/uc?export=download&id=0B5_zXPDEfg8XYXE5aTd6aTRMUVk">
             <img id="jbut2" src="img/buttons/join_b.png" alt="">
           </a>
         </div>
@@ -158,7 +180,7 @@ ______
       <span class="image full">
         <img src="img/detail/curating_detailnobut.png" alt="">
         <div class="but">
-          <a href="#">
+          <a href="http://drive.google.com/uc?export=download&id=0B5_zXPDEfg8XYXE5aTd6aTRMUVk">
             <img id="jbut3" src="img/buttons/join_b.png" alt="">
           </a>
         </div>
@@ -168,7 +190,7 @@ ______
       <span class="image full">
         <img src="img/detail/design_detailnobut.png" alt="">
         <div class="but">
-          <a href="#">
+          <a href="http://drive.google.com/uc?export=download&id=0B5_zXPDEfg8XYXE5aTd6aTRMUVk">
             <img id="jbut4" src="img/buttons/join_b.png" alt="">
           </a>
         </div>
@@ -178,7 +200,7 @@ ______
       <span class="image full">
         <img src="img/detail/finance_detailnobut.png" alt="">
         <div class="but">
-          <a href="#">
+          <a href="http://drive.google.com/uc?export=download&id=0B5_zXPDEfg8XYXE5aTd6aTRMUVk">
             <img id="jbut5" src="img/buttons/join_b.png" alt="">
           </a>
         </div>
@@ -190,7 +212,6 @@ ______
         <img id="it" src="img/it_b.png" alt="">
       </span>
       <a href="#6">
-        <div class="content"></div>
       </a>
     </li>
     <!-- finance and it for phone -->
@@ -198,6 +219,9 @@ ______
       <span class="image phone">
         <img src="img/phone/finance_detailphone.png" alt="">
         <div class="phonebut">
+          <a href="http://drive.google.com/uc?export=download&id=0B5_zXPDEfg8XYXE5aTd6aTRMUVk">
+            <img src="img/buttons/join_b.png" alt="">
+          </a>
         </div>
       </span>
     </li>
@@ -205,6 +229,9 @@ ______
       <span class="image phone">
         <img src="img/phone/it_detailphone.png" alt="">
         <div class="phonebut">
+          <a href="http://drive.google.com/uc?export=download&id=0B5_zXPDEfg8XYXE5aTd6aTRMUVk">
+            <img src="img/buttons/join_b.png" alt="">
+          </a>
         </div>
       </span>
     </li>
@@ -223,6 +250,28 @@ ______
       </span>
       <a href="#8"></a>
     </li>
+    <!-- phone -->
+    <li class="flex-phone" id="p7">
+      <span class="image phone">
+        <img src="img/phone/market_detailphone.png" alt="">
+        <div class="phonebut">
+          <a href="http://drive.google.com/uc?export=download&id=0B5_zXPDEfg8XYXE5aTd6aTRMUVk">
+            <img src="img/buttons/join_b.png" alt="">
+          </a>
+        </div>
+      </span>
+    </li>
+    <li class="flex-phone" id="p8">
+      <span class="image phone">
+        <img src="img/phone/photo_detailphone.png" alt="">
+        <div class="phonebut">
+          <a href="http://drive.google.com/uc?export=download&id=0B5_zXPDEfg8XYXE5aTd6aTRMUVk">
+            <img src="img/buttons/join_b.png" alt="">
+          </a>
+        </div>
+      </span>
+    </li>
+    <!-- end -->
     <li class="flex-item" id="9" style="">
       <a href="#9"></a>
       <span class="image move">
@@ -233,9 +282,21 @@ ______
       <span class="image move">
         <img id="join" src="img/join_b.png" alt="">
       </span>
-      <a href="http://drive.google.com/uc?export=download&id=0B3X_LcqIRrpeMGJNOU5LME1BZnc">
+      <a href="http://drive.google.com/uc?export=download&id=0B5_zXPDEfg8XYXE5aTd6aTRMUVk">
       </a>
     </li>
+    <!-- phone -->
+    <li class="flex-phone" id="p9">
+      <span class="image phone">
+        <img src="img/phone/sd_detailphone.png" alt="">
+        <div class="phonebut">
+          <a href="http://drive.google.com/uc?export=download&id=0B5_zXPDEfg8XYXE5aTd6aTRMUVk">
+            <img src="img/buttons/join_b.png" alt="">
+          </a>
+        </div>
+      </span>
+    </li>
+    <!-- end -->
 
     <!-- detail part2 -->
 
@@ -243,7 +304,7 @@ ______
       <span class="image full">
         <img src="img/detail/it_detailnobut.png" alt="">
         <div class="but">
-          <a href="#">
+          <a href="http://drive.google.com/uc?export=download&id=0B5_zXPDEfg8XYXE5aTd6aTRMUVk">
             <img id="jbut6" src="img/buttons/join_b.png" alt="">
           </a>
         </div>
@@ -253,7 +314,7 @@ ______
       <span class="image full">
         <img src="img/detail/market_detailnobut.png" alt="">
         <div class="but">
-          <a href="#">
+          <a href="http://drive.google.com/uc?export=download&id=0B5_zXPDEfg8XYXE5aTd6aTRMUVk">
             <img id="jbut7" src="img/buttons/join_b.png" alt="">
           </a>
         </div>
@@ -263,7 +324,7 @@ ______
       <span class="image full">
         <img src="img/detail/photo_detailnobut.png" alt="">
         <div class="but">
-          <a href="#">
+          <a href="http://drive.google.com/uc?export=download&id=0B5_zXPDEfg8XYXE5aTd6aTRMUVk">
             <img id="jbut8" src="img/buttons/join_b.png" alt="">
           </a>
         </div>
@@ -273,7 +334,7 @@ ______
       <span class="image full">
         <img src="img/detail/sd_detailnobut.png" alt="">
         <div class="but">
-          <a href="#">
+          <a href="http://drive.google.com/uc?export=download&id=0B5_zXPDEfg8XYXE5aTd6aTRMUVk">
             <img id="jbut9" src="img/buttons/join_b.png" alt="">
           </a>
         </div>
